Add send wwire transfer form, Add Option for selecting chat room from wire transfer form, Send details into selected chat room, Change app name/app icon, Changed logo in login/launch screen

--- a/vector/src/main/res/values-v21/styles.xml
+++ b/vector/src/main/res/values-v21/styles.xml
@@ -1,2 +1,9 @@
 <resources>
+    <!-- WireTransfer activity -->
+    <style name="WireTransferActivityTheme" parent="AppTheme.NoActionBar">
+        <item name="editTextColor">@android:color/white</item>
+        <item name="android:editTextColor">@android:color/white</item>
+        <item name="android:textColorHint">?attr/activity_bottom_gradient_color</item>
+        <item name="android:homeAsUpIndicator">@drawable/back_button_image</item>
+    </style>
 </resources>
