--- a/vector/src/main/res/layout/vector_activity_splash.xml
+++ b/vector/src/main/res/layout/vector_activity_splash.xml
@@ -8,23 +8,33 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_centerInParent="true">
+        android:layout_centerInParent="true"
+        android:orientation="vertical">
 
         <pl.droidsonroids.gif.GifImageView
-            android:id="@+id/animated_logo_image_view"
+            android:id="@+id/animated_logo_image_view1"
             android:layout_width="240dp"
             android:layout_height="240dp"
+            android:visibility="gone"
             android:src="@drawable/riot_splash" />
+
+        <ImageView
+            android:id="@+id/animated_logo_image_view"
+            android:layout_width="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_height="240dp"
+            android:src="@drawable/logo_login" />
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <ProgressBar
-                android:layout_centerInParent="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:indeterminate="true"/>
+                android:layout_centerInParent="true"
+                android:indeterminate="true" />
         </RelativeLayout>
     </LinearLayout>
 </RelativeLayout>
