--- a/vector/src/main/res/menu/bottom_navigation_main.xml
+++ b/vector/src/main/res/menu/bottom_navigation_main.xml
@@ -2,27 +2,34 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- define an empty title else lint fails -->
     <item
-        android:title=""
         android:id="@+id/bottom_action_home"
         android:enabled="true"
-        android:icon="@drawable/ic_home_black_24dp" />
+        android:icon="@drawable/ic_home_black_24dp"
+        android:title="" />
 
     <item
-        android:title=""
+        android:id="@+id/bottom_action_wire_transfer"
+        android:enabled="true"
+        android:icon="@drawable/ic_account_balance_black_24dp"
+        android:title="" />
+
+
+    <item
         android:id="@+id/bottom_action_favourites"
         android:enabled="true"
-        android:icon="@drawable/ic_star_black_24dp" />
+        android:icon="@drawable/ic_star_black_24dp"
+        android:title="" />
 
     <item
-        android:title=""
         android:id="@+id/bottom_action_people"
         android:enabled="true"
-        android:icon="@drawable/ic_person_black_24dp" />
+        android:icon="@drawable/ic_person_black_24dp"
+        android:title="" />
 
     <item
-        android:title=""
         android:id="@+id/bottom_action_rooms"
         android:enabled="true"
-        android:icon="@drawable/ic_people_black_24dp"/>
+        android:icon="@drawable/ic_people_black_24dp"
+        android:title="" />
 
 </menu>
