--- a/vector/src/main/res/values/colors.xml
+++ b/vector/src/main/res/values/colors.xml
@@ -36,4 +36,6 @@
 
     <color name="tab_bar_unselected_background_color_light">@color/primary_color_light</color>
     <color name="tab_bar_unselected_background_color_dark">@color/primary_color_dark</color>
+    <color name="white">#FFFFFF</color>
+    <color name="grey">#A9A9A9</color>
 </resources>
