1. Add matrix login if firebase fails, for already existing users, 2. Update server url, 3. resources and icons change to wiresafe from riot

--- a/vector/src/main/res/layout/vector_activity_splash.xml
+++ b/vector/src/main/res/layout/vector_activity_splash.xml
@@ -16,7 +16,7 @@
             android:layout_width="240dp"
             android:layout_height="240dp"
             android:visibility="gone"
-            android:src="@drawable/riot_splash" />
+            android:src="@drawable/wiresafe_splash" />
 
         <ImageView
             android:id="@+id/animated_logo_image_view"
