--- a/vector/src/main/res/values/donottranslate.xml
+++ b/vector/src/main/res/values/donottranslate.xml
@@ -4,10 +4,14 @@
     <string name="riot_app_name">Wiresafe</string>
 
     <!-- server urls -->
-    <string name="vector_im_server_url" translatable="false">https://vector.im</string>
-    <string name="matrix_org_server_url" translatable="false">https://matrix.org</string>
-    <string name="default_hs_server_url" translatable="false">https://matrix.org</string>
-    <string name="default_identity_server_url" translatable="false">https://vector.im</string>
+    <!--<string name="vector_im_server_url" translatable="false">https://vector.im</string>-->
+    <string name="vector_im_server_url" translatable="false">https://neo-identity.wiresafe.com</string>
+    <!--<string name="matrix_org_server_url" translatable="false">https://matrix.org</string>-->
+    <string name="matrix_org_server_url" translatable="false">https://neo.wiresafe.com</string>
+    <!--<string name="default_hs_server_url" translatable="false">https://matrix.org</string>-->
+    <string name="default_hs_server_url" translatable="false">https://neo.wiresafe.com</string>
+    <!--<string name="default_identity_server_url" translatable="false">https://vector.im</string>-->
+    <string name="default_identity_server_url" translatable="false">https://neo-identity.wiresafe.com</string>
 
     <!--string name="settings_room_privacy_label">Privacy</string-->
 
