--- a/vector/src/main/res/layout/activity_vector_login.xml
+++ b/vector/src/main/res/layout/activity_vector_login.xml
@@ -108,16 +108,39 @@
             android:orientation="vertical">
 
             <RelativeLayout
+                android:id="@+id/login_logo_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp">
+                android:layout_marginTop="30dp"
+                android:visibility="visible">
 
                 <ImageView
                     android:id="@+id/login_large_logo"
                     android:layout_width="wrap_content"
                     android:layout_height="160dp"
                     android:layout_centerHorizontal="true"
-                    android:src="@drawable/logo_login" />
+                    android:src="@drawable/logo_login"
+                    android:visibility="visible" />
+
+                <TextView
+                    android:id="@+id/check_internet_alert_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/login_large_logo"
+                    android:layout_marginTop="100dp"
+                    android:gravity="center"
+                    android:padding="20dp"
+                    android:text="@string/please_check_your_internet_connectivity_and_try_again"
+                    android:textColor="@color/primary_color_dark"
+                    android:textSize="15sp" />
+
+                <Button
+                    android:id="@+id/button_retry"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/check_internet_alert_text"
+                    android:layout_centerHorizontal="true"
+                    android:text="@string/retry" />
             </RelativeLayout>
 
             <LinearLayout
@@ -140,7 +163,9 @@
                         android:id="@+id/sign_in_button_google"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="100dp" />
+                        android:layout_marginTop="100dp"
+                        android:visibility="gone" />
+
 
                     <EditText
                         android:id="@+id/login_user_name"
